--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -100,6 +100,7 @@ devtools::install_github('KrasnitzLab/RAIDS')
 <br>
 <br>
 
+<a name="mains"></a>
 
 # Main Steps
 
@@ -119,6 +120,9 @@ The main steps are:
 4. Infer ancestry for the subjects of the external study
 
 These main steps are described in detail in the following.
+
+You can also run the steps from 5.2.4 to the end, with the default parameters,
+in one command with the [wrapper](#wrapper) function.
 
 <br>
 <br>
@@ -327,7 +331,11 @@ rm(demo_PED_File)
 
 <br>
 
-### Sub-Step 4. Create a profile GDS file (1 GDS file per profile) 
+
+### Sub-Step 4 Create a profile GDS file (1 GDS file per profile) 
+
+From here you can run directly the [wrapper](#wrapper) function 
+or you can run each step separetly as explained here.
 
 This step requires 3 files as input:
 
@@ -955,8 +963,149 @@ for(i in seq_len(length(listSamples))){
 
 ## Close the 1KG GDS file (important)
 closefn.gds(gds)
+
+####################################################################
+## Show the ancestry inference (SuperPop) and 
+## optimal number of PCA component D
+## optimal number neighbour K
+####################################################################
+
+resAncestry <- read.csv(file.path(PATH_OUT, paste0(ped$Name.ID[1], ".Ancestry.csv")))
+resAncestry
+
+
 unlink(file.GDSSample, force=TRUE)
 unlink(PATH_OUT, recursive = TRUE, force=TRUE)
+
+```
+
+<a name="wrapper"></a>
+
+# Wrapper function to run ancestry inference in one command
+
+The Steps 5.1 to 5.2.3 ( [Main Step](#mains) ) are required before 
+this section.
+
+The wrapper function requires 4 files as input:
+
+- The **1KG GDS file**
+- The **1KG SNV Annotation GDS file**
+- The **Sample SNP pileup file** (one per sample present in the study)
+- The **Sample PED RDS file** (one file with information for all samples in the study)
+
+A *data.frame* containing the general information about the study is 
+also required. The *data.frame* must contain those 3 columns:
+
+- **study.id**: The study identifier (example: TCGA-BRCA).
+- **study.desc**: The description of the study.
+- **study.platform**: The type of sequencing (example: RNA-seq).
+
+
+```{r runExomeAncestry, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
+
+## Path to the demo 1KG GDS file is located in this package
+data.dir <- system.file("extdata", package="RAIDS")
+
+#################################################################
+## The path and file name for the PED RDS file
+## will the information about the analyzed samples
+#################################################################
+
+filePED <- file.path(data.dir, "example", "pedEx.rds")
+ped <- readRDS(filePED)
+head(ped)
+
+#################################################################
+## The 1KG GDS file and the 1KG SNV Annotation GDS file
+## need to be located in the same directory
+## Note that the 1KG GDS file used for this example is a
+## simplified version and CANNOT be used for any real analysis
+#################################################################
+
+PATH_1KG <- file.path(data.dir, "example", "gdsRef")
+
+fileName.GDS.1KG <- "ex1kg.gds"
+file.GDS <- file.path(PATH_1KG, fileName.GDS.1KG)
+
+fileName.GDS.Annot <- "exAnnot1kg.gds"
+file.Annot <- file.path(PATH_1KG, fileName.GDS.Annot)
+
+
+#################################################################
+## The Sample SNP pileup files (one per sample) need
+## to be located in the same directory.
+#################################################################
+PATHGENO <- file.path(data.dir, "example", "snpPileup")
+
+#################################################################
+## The path where the Sample GDS files (one per sample)
+## will be created need to be specified.
+#################################################################
+PATHPROFILEGDS <- file.path(data.dir, "example", "out.tmp")
+
+PATHOUT <- file.path(data.dir, "example", "res.out")
+
+#################################################################
+## A data frame containing general information about the study
+## is also required. The data frame must have
+## those 3 columns: "study.id", "study.desc", "study.platform"
+#################################################################
+studyDF <- data.frame(study.id = "MYDATA",
+                   study.desc = "Description",
+                   study.platform = "PLATFORM",
+                   stringsAsFactors = FALSE)
+
+gds_1KG <- snpgdsOpen(file.GDS)
+
+####################################################################
+## Fix RNG seed to ensure reproducible results
+####################################################################
+
+set.seed(3043)
+
+
+dataRef <- select1KGPop(gds_1KG, nbSamples = 2L)
+
+closefn.gds(gds_1KG)
+
+## Chromosome length information
+## chr23 is chrX, chr24 is chrY and chrM is 25
+chrInfo <- c(248956422L, 242193529L, 198295559L, 190214555L,
+ 181538259L, 170805979L, 159345973L, 145138636L, 138394717L, 133797422L,
+ 135086622L, 133275309L, 114364328L, 107043718L, 101991189L, 90338345L,
+ 83257441L,  80373285L,  58617616L,  64444167L,  46709983L, 50818468L,
+ 156040895L, 57227415L,  16569L)
+
+## A formal way to get the chormosome length information
+## library(BSgenome.Hsapiens.UCSC.hg38)
+## chrInfo <- integer(25L)
+## for(i in seq_len(22L)){ chrInfo[i] <-
+##                          length(Hsapiens[[paste0("chr", i)]])}
+## chrInfo[23] <- length(Hsapiens[["chrX"]])
+## chrInfo[24] <- length(Hsapiens[["chrY"]])
+## chrInfo[25] <- length(Hsapiens[["chrM"]])
+
+runExomeAncestry(pedStudy = ped, studyDF = studyDF,
+                 PATHPROFILEGDS = PATHPROFILEGDS,
+                 PATHGENO = PATHGENO,
+                 PATH_OUT = PATHOUT,
+                 File.gds_1KG = file.GDS,
+                 File.gds_1KG.Annot = file.Annot,
+                 chrInfo = chrInfo,
+                 dataRefSyn = dataRef)
+list.files(PATHOUT)
+list.files(file.path(PATHOUT, ped$Name.ID[1]))
+
+####################################################################
+## Show the ancestry inference (SuperPop) and 
+## optimal number of PCA component D
+## optimal number neighbour K
+####################################################################
+
+resAncestry <- read.csv(file.path(PATHOUT, paste0(ped$Name.ID[1], ".Ancestry.csv")))
+resAncestry
+unlink(PATHPROFILEGDS, recursive = TRUE, force=TRUE)
+unlink(PATHOUT, recursive = TRUE, force=TRUE)
 
 ```
 
