Update vignette and man of runExomeAncestry

--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -1134,6 +1134,18 @@ unlink(PATHOUT, recursive = TRUE, force=TRUE)
 
 ```
 
+<br>
+<br>
+
+The *runExomeAncestry()* function generates 3 types of files 
+in the *OUTPUT* directory.
+
+* The ancestry inference CSV file (".Ancestry.csv" file) 
+* The inference information RDS file (".infoCall.rds" file)
+* The parameter information RDS files from the synthetic inference ("KNN.synt.*.rds" files in a sub-directory)
+
+In addition, a sub-directory (named using the *profile ID*) is 
+also created. 
 
 
 <br>
